refactoring, some fixes.

--- a/webcrawl.ipynb
+++ b/webcrawl.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2147483647"
+       "131072"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,7 @@
     "    '.gov',\n",
     "    '.pdf',\n",
     "    '.doc',\n",
+    "    'xml',\n",
     "    'php',\n",
     "    'mailto:',\n",
     "    '@',\n",
@@ -89,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Most recent URL: https://admissions.charlotte.edu/julie-desario \\nStatus: Success'"
+       "'Most recent URL: https://sites.charlotte.edu/harwood/?sfid=9267&sf_paged=24 \\nStatus: Success'"
       ]
      },
      "metadata": {},
@@ -104,11 +105,20 @@
     {
      "data": {
       "text/plain": [
-       "'Successes: 1030, Failures: 6'"
+       "'Successes: 14897, Failures: 492'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ryan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\builder\\__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "  warnings.warn(\n",
+      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n"
+     ]
     }
    ],
    "source": [
@@ -155,11 +165,11 @@
     "    try:\n",
     "        with open(FILENAME, 'w', newline='', encoding=\"utf-8\") as file:\n",
     "            writer = csv.writer(file)\n",
-    "            writer.writerow(['URL', 'Status', 'Text'])  # Write the column labels\n",
+    "            writer.writerow(['URL', 'Text'])  # Write the column labels\n",
     "            for endpoint in valid_endpoints:  # Write the valid endpoints\n",
     "                writer.writerow(endpoint)\n",
-    "            for endpoint in failed_endpoints:  # Write the failed endpoints\n",
-    "                writer.writerow(endpoint)\n",
+    "            # for endpoint in failed_endpoints:  # Write the failed endpoints\n",
+    "            #     writer.writerow(endpoint)\n",
     "            file.flush()\n",
     "            os.fsync(file.fileno())\n",
     "    except Exception as e:\n",
@@ -235,7 +245,7 @@
     "                        for script in soup([\"script\", \"style\"]):  # Remove JavaScript and CSS blocks\n",
     "                            script.decompose()\n",
     "                        # Remove header, footer, nav, and aside\n",
-    "                        for tag in soup([\"header\", \"footer\", \"nav\", \"aside\"]):\n",
+    "                        for tag in soup([\"header\", \"footer\", \"nav\"]):\n",
     "                            tag.decompose() \n",
     "                        # Remove divs with class \"sidebar\" or \"ad\"\n",
     "                        for div in soup.find_all(\"div\", class_=[\"sidebar\", \"ad\"]):\n",
@@ -244,12 +254,12 @@
     "                        text = soup.get_text()  \n",
     "                        text = ' '.join(text.split())\n",
     "                        # Save the text along with the URL and status\n",
-    "                        valid_endpoints.append([url, status, str(text)])  \n",
+    "                        valid_endpoints.append([url, str(text)])  \n",
     "                        print_status(url, status)\n",
     "                        \n",
     "                    else:\n",
     "                        # If the status is not 'Success', add the URL and status to the failed_endpoints list\n",
-    "                        failed_endpoints.append([url, status, ''])\n",
+    "                        failed_endpoints.append([url, ''])\n",
     "                        visited.add(url)\n",
     "                except Exception as e:\n",
     "                    # If an exception occurred while processing the HTML content, print the status and continue\n",
