--- a/Old/webscrape.ipynb
+++ b/Old/webscrape.ipynb
@@ -11,11 +11,13 @@
     "* LlamaIndex\n",
     "* langchain\n",
     "* embedchain \n",
-    "* haystack with pre trained nlp model, can use as pipeline, in memory db or aws elasticsearch or faiss\n",
+    "* haystack with pre trained nlp model, can use as pipeline, in memory db or elasticsearch or faiss\n",
     "* will need to use a transformer model to get embeddings, and index them in a db\n",
     "* can use a transformer model to get embeddings and then use faiss to find similar embeddings\n",
     "* can use a transformer model to get embeddings and then use clustering to find similar embeddings\n",
-    "* "
+    "\n",
+    "Pipeline ideas:\n",
+    "* Hash of html sites to see if changes have been made, then repull html and update embedding for that site"
    ]
   },
   {
