90% done with MVP

--- a/Old/webcrawl.ipynb
+++ b/Old/webcrawl.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILENAME = './data/endpoints.csv'\n",
+    "FILENAME = './results/endpoints.csv'\n",
     "DOMAIN = 'https://charlotte.edu'"
    ]
   },
@@ -90,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Most recent URL: https://sites.charlotte.edu/harwood/?sfid=9267&sf_paged=24 \\nStatus: Success'"
+       "'Most recent URL: https://library.charlotte.edu/check-out-request/borrow-laptops \\nStatus: Success'"
       ]
      },
      "metadata": {},
@@ -105,20 +105,11 @@
     {
      "data": {
       "text/plain": [
-       "'Successes: 14897, Failures: 492'"
+       "'Successes: 41, Failures: 0'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Ryan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\builder\\__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
-      "  warnings.warn(\n",
-      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n"
-     ]
     }
    ],
    "source": [
@@ -268,7 +259,10 @@
     "                    continue\n",
     "        # Write the valid and failed endpoints to a CSV file\n",
     "        write_to_csv(valid_endpoints, failed_endpoints)\n",
-    "        \n",
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(os.path.dirname(FILENAME), exist_ok=True)\n",
+    "\n",
     "# Clear the csv file\n",
     "open(FILENAME, 'w').close()\n",
     "\n",
@@ -375,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
