Fix MVP preview

--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -40,9 +40,7 @@
    "source": [
     "## Methodology\n",
     "\n",
-    "Our methodology begins with recursive/deep crawling the University’s website, preprocessing the site data, including the extraction and cleaning of text. Following this, we will generate context aware summaries using a pre-trained LLM model, then create embeddings in a similar manner to capture the semantic meaning of texts. For the search engine's development, we plan to embed user queries and perform similarity searches on our embeddings database, utilizing a small custom front-end web application for communication to the user. Finally, we will evaluate the search engine's performance with A-B testing against the UNC Charlotte website.\n",
-    "\n",
-    "![image.png](attachment:image.png)\n"
+    "Our methodology begins with recursive/deep crawling the University’s website, preprocessing the site data, including the extraction and cleaning of text. Following this, we will generate context aware summaries using a pre-trained LLM model, then create embeddings in a similar manner to capture the semantic meaning of texts. For the search engine's development, we plan to embed user queries and perform similarity searches on our embeddings database, utilizing a small custom front-end web application for communication to the user. Finally, we will evaluate the search engine's performance with A-B testing against the UNC Charlotte website.`\n"
    ]
   },
   {
