Added title from pages to scraped data

--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -90,18 +90,18 @@
     "\n",
     "* Currently we store the page data for every visited page, and later process and filter out the data set we want to be able to search over. This limits our calls to the site, however is not ideal. If we define the filters we want during the preprocessing step, we could avoid storing the data we don't want in the first place. Traversal of the entire site would still be necessary, but we could avoid storing the data we don't want.\n",
     "\n",
-    "* Alternatively, storing the entirely html could allow for comparing the hash of the html to see if the page has changed, and only storing the new data / sending it through the pipeline. This would allow for a more up to date dataset and search engine, and would allow for the dataset to be updated over time in a more efficient manner. \n"
+    "* Additionally, storing the entirely html could allow for comparing the hash of the html to see if the page has changed, and only storing the new data / sending it through the pipeline. This would allow for a more up to date dataset and search engine, and would allow for the dataset to be updated over time in a more efficient manner. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Most recent URL: https://admissions.charlotte.edu \\nStatus: Success'"
+       "'Most recent URL: https://eng-resources.charlotte.edu/unccengkit/cooling, Status: Success, Exception: None'"
       ]
      },
      "metadata": {},
@@ -110,11 +110,20 @@
     {
      "data": {
       "text/plain": [
-       "'Successes: 21, Failures: 0'"
+       "'Successes: 14675, Failures: 189'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n",
+      "c:\\Python312\\Lib\\html\\parser.py:171: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "  k = self.parse_starttag(i)\n"
+     ]
     }
    ],
    "source": [
@@ -122,6 +131,7 @@
     "\n",
     "import csv\n",
     "import os\n",
+    "import re\n",
     "from urllib.parse import urljoin\n",
     "from urllib.parse import urlparse\n",
     "import requests \n",
@@ -130,11 +140,14 @@
     "from bs4 import BeautifulSoup\n",
     "csv.field_size_limit(2**31 - 1)\n",
     "\n",
-    "FILENAME = './results/endpoints.csv'\n",
-    "DOMAIN = 'https://charlotte.edu'\n",
+    "RUN = True # Set to False to skip the web scraping, and use the existing CSV file\n",
+    "\n",
+    "FILENAME = './data/endpoints.csv' # The file to write the endpoints to\n",
+    "DOMAIN = 'https://charlotte.edu' # The domain to crawl\n",
+    "PATH_LIMIT = 2  # Maximum number of slashes in the URL path\n",
     "\n",
     "# Url parameters to exclude/skip\n",
-    "EXCLUDE = ['news-articles', 'news-events', 'news-media', 'linkedin', 'facebook', 'twitter', 'instagram', 'youtube', 'flickr', 'pinterest', '.com', '.org', '.net', '.gov', '.pdf', '.doc', 'xml', 'php', 'mailto:', '@', 'tel:', 'javascript:', 'tel:', 'sms:', 'mailto:', 'angular', 'react', '.js', 'event', 'corporate', '#', 'image', 'gallery', 'taskstream-student-handbook']    \n",
+    "EXCLUDE = ['?', 'page', 'gateway', 'illiad', 'news-articles', 'news-events', 'news-media', 'linkedin', 'facebook', 'twitter', 'instagram', 'youtube', 'flickr', 'pinterest', '.com', '.org', '.net', '.gov', '.pdf', '.doc', 'xml', 'php', 'mailto:', '@', 'tel:', 'javascript:', 'tel:', 'sms:', 'mailto:', 'angular', 'react', '.js', 'event', 'corporate', '#', 'image', 'gallery', 'taskstream-student-handbook']    \n",
     "\n",
     "# Display the progress of the web scraping\n",
     "current_display = display('Starting...', display_id=True)\n",
@@ -142,7 +155,7 @@
     "success_count = 0\n",
     "failure_count = 0\n",
     "\n",
-    "def print_status(url, status):\n",
+    "def print_status(url, status, exception=None):\n",
     "    global success_count\n",
     "    global failure_count\n",
     "    global current_display\n",
@@ -156,9 +169,8 @@
     "        failure_count += 1\n",
     "        \n",
     "    # Print the most recent URL and status, and the total counts    \n",
-    "    current_display.update(f'Most recent URL: {url}, Status: {status}')\n",
+    "    current_display.update(f'Most recent URL: {url}, Status: {status}, Exception: {exception}')\n",
     "    progress_display.update(f'Successes: {success_count}, Failures: {failure_count}')\n",
-    "    \n",
     "\n",
     "def remove_url_prefix(url):\n",
     "    url = url.replace('http://', '').replace('https://', '').replace('www.', '')\n",
@@ -171,7 +183,7 @@
     "        split_url = re.split('https?://', url)\n",
     "        return 'mailto:' not in url and '@' not in url and 'charlotte.edu' in split_url[0] or len(split_url) > 1 and 'charlotte.edu' in split_url[1]\n",
     "    except Exception as e:\n",
-    "        print_status(url, 'Exception')\n",
+    "        print_status(url, 'Exception', e)\n",
     "        return False\n",
     "    \n",
     "def write_to_csv(valid_endpoints, failed_endpoints):\n",
@@ -179,7 +191,7 @@
     "    try:\n",
     "        with open(FILENAME, 'w', newline='', encoding=\"utf-8\") as file:\n",
     "            writer = csv.writer(file)\n",
-    "            writer.writerow(['URL', 'Text'])  # Write the column labels\n",
+    "            writer.writerow(['URL', 'Title', 'Text'])  # Write the column labels\n",
     "            for endpoint in valid_endpoints:  # Write the valid endpoints\n",
     "                writer.writerow(endpoint)\n",
     "            # for endpoint in failed_endpoints:  # Write the failed endpoints\n",
@@ -187,7 +199,7 @@
     "            file.flush()\n",
     "            os.fsync(file.fileno())\n",
     "    except Exception as e:\n",
-    "        print_status(None, 'Failed')\n",
+    "        print_status(None, 'Failed', e)\n",
     "\n",
     "def fetch_url(url):\n",
     "    try:\n",
@@ -199,6 +211,7 @@
     "    except (requests.exceptions.RequestException, requests.exceptions.Timeout, ValueError):\n",
     "        print_status(url, 'Failed')\n",
     "        return ('Failed', None)\n",
+    "    \n",
     "def crawl_domain(domain):\n",
     "    # Initialize sets and lists to keep track of visited URLs, URLs to visit, and endpoints\n",
     "    visited = set()\n",
@@ -250,26 +263,42 @@
     "                                clean_url = remove_url_prefix(full_url)\n",
     "                                slash_count = urlparse(clean_url).path.count('/')\n",
     "                                # If the URL is valid, hasn't been visited yet, and doesn't have too many slashes, add it to the futures\n",
-    "                                if is_valid_url(clean_url) and slash_count <= 2 and clean_url not in visited:\n",
+    "                                if is_valid_url(clean_url) and slash_count <= PATH_LIMIT and clean_url not in visited:\n",
     "                                    futures[executor.submit(fetch_url, full_url)] = full_url\n",
     "                                    visited.add(clean_url)\n",
     "                        \n",
     "                        # Text extraction\n",
-    "                        # Remove JavaScript and CSS blocks, and common sections like headers, footers, etc.\n",
-    "                        for script in soup([\"script\", \"style\"]):  # Remove JavaScript and CSS blocks\n",
-    "                            script.decompose()\n",
-    "                        # Remove header, footer, nav, and aside\n",
-    "                        for tag in soup([\"header\", \"footer\", \"nav\"]):\n",
-    "                            tag.decompose() \n",
-    "                        # Remove divs with class \"sidebar\" or \"ad\"\n",
-    "                        for div in soup.find_all(\"div\", class_=[\"sidebar\", \"ad\"]):\n",
-    "                            div.decompose()\n",
-    "                        # Extract text from the HTML content\n",
-    "                        text = soup.get_text()  \n",
+    "                        \n",
+    "                        # Save title if it exists\n",
+    "                        title_text = soup.title.string if soup.title else ''\n",
+    "                        \n",
+    "                        # Find the \"main\", \"main-content\", or \"body\" element\n",
+    "                        element = None\n",
+    "                        main_element = soup.find(id=\"main\")\n",
+    "                        main_content_element = soup.find(id=\"main-content\")\n",
+    "\n",
+    "                        if main_element is not None:\n",
+    "                            element = main_element\n",
+    "                        elif main_content_element is not None:\n",
+    "                            element = main_content_element.parent\n",
+    "                        else:\n",
+    "                            element = soup.find('body')\n",
+    "\n",
+    "                        # Extract all visible text in the element and its child elements\n",
+    "                        if element:\n",
+    "                            text = element.get_text(strip=True, separator=' ')\n",
+    "                        else:\n",
+    "                            text = ''\n",
+    "\n",
+    "                        text = text.replace('\"', \"'\")  # Replace all double quotes with single quotes\n",
+    "                        text = text.replace('\\n', '')  # Remove new lines\n",
+    "                        text = text.replace('\\t', '')  # Remove tabs\n",
     "                        text = ' '.join(text.split())\n",
     "                        # Save the text along with the URL and status\n",
-    "                        valid_endpoints.append([url, str(text)])  \n",
+    "                        valid_endpoints.append([str(url), str(title_text), str(text)])  \n",
     "                        print_status(url, status)\n",
+    "                        if len(valid_endpoints) % 100 == 0:\n",
+    "                            write_to_csv(valid_endpoints, failed_endpoints)\n",
     "                        \n",
     "                    else:\n",
     "                        # If the status is not 'Success', add the URL and status to the failed_endpoints list\n",
@@ -283,14 +312,14 @@
     "        # Write the valid and failed endpoints to a CSV file\n",
     "        write_to_csv(valid_endpoints, failed_endpoints)\n",
     "\n",
-    "# Create the directory if it doesn't exist\n",
-    "os.makedirs(os.path.dirname(FILENAME), exist_ok=True)\n",
     "\n",
-    "# Clear the csv file\n",
-    "open(FILENAME, 'w').close()\n",
-    "\n",
-    "# Crawl the domain\n",
-    "crawl_domain(DOMAIN)"
+    "if not RUN: # If RUN is False, skip the web scraping and use the existing CSV file\n",
+    "    print('Skipping web scraping...')\n",
+    "    \n",
+    "else: # If RUN is True, perform the web scraping    \n",
+    "    os.makedirs(os.path.dirname(FILENAME), exist_ok=True) # Create the directory if it doesn't exist\n",
+    "    open(FILENAME, 'w').close() # Clear the csv file\n",
+    "    crawl_domain(DOMAIN) # Crawl the domain"
    ]
   },
   {
@@ -325,20 +354,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ryan\\AppData\\Local\\Temp\\ipykernel_24752\\3366986551.py:19: SettingWithCopyWarning: \n",
+      "C:\\Users\\Ryan\\AppData\\Local\\Temp\\ipykernel_6564\\1238050412.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['Text'] = df['Text'].astype(str)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>path_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://charlotte.edu</td>\n",
+       "      <td>The University of North Carolina at Charlotte ...</td>\n",
+       "      <td>UNC Charlotte Icons 0 percent of new undergrad...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2773</th>\n",
+       "      <td>http://lc.charlotte.edu</td>\n",
+       "      <td>Learning Communities</td>\n",
+       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3522</th>\n",
+       "      <td>http://hi.charlotte.edu</td>\n",
+       "      <td>Health Informatics and Analytics</td>\n",
+       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2904</th>\n",
+       "      <td>http://pd.charlotte.edu</td>\n",
+       "      <td>Student Professional Development &amp; Employer Ou...</td>\n",
+       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10812</th>\n",
+       "      <td>http://iop.charlotte.edu</td>\n",
+       "      <td>Office of Intercultural and Educational Experi...</td>\n",
+       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            URL  \\\n",
+       "0         https://charlotte.edu   \n",
+       "2773    http://lc.charlotte.edu   \n",
+       "3522    http://hi.charlotte.edu   \n",
+       "2904    http://pd.charlotte.edu   \n",
+       "10812  http://iop.charlotte.edu   \n",
+       "\n",
+       "                                                   Title  \\\n",
+       "0      The University of North Carolina at Charlotte ...   \n",
+       "2773                                Learning Communities   \n",
+       "3522                    Health Informatics and Analytics   \n",
+       "2904   Student Professional Development & Employer Ou...   \n",
+       "10812  Office of Intercultural and Educational Experi...   \n",
+       "\n",
+       "                                                    Text  path_count  \n",
+       "0      UNC Charlotte Icons 0 percent of new undergrad...           0  \n",
+       "2773   Skip to Main Content Quick Links Gateway Links...           0  \n",
+       "3522   Skip to Main Content Quick Links Gateway Links...           0  \n",
+       "2904   Skip to Main Content Quick Links Gateway Links...           0  \n",
+       "10812  Skip to Main Content Quick Links Gateway Links...           0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -360,7 +483,7 @@
     "    return df\n",
     "\n",
     "def filter_by_text_length(df, min_length):\n",
-    "    df['Text'] = df['Text'].astype(str)\n",
+    "    df.loc[:, 'Text'] = df['Text'].astype(str)\n",
     "    df = df[df['Text'].str.len() > min_length]\n",
     "    return df\n",
     "\n",
@@ -384,12 +507,13 @@
     "endpoints = import_and_clean_data('./data/endpoints.csv')\n",
     "endpoints = filter_urls(endpoints, ['?'])\n",
     "endpoints = sort_by_path_count(endpoints)\n",
-    "subdomain_test_set = endpoints[endpoints['path_count'] == 0] # Subdomain test set\n",
-    "subdomain_test_set = filter_by_text_length(subdomain_test_set, 50)\n",
-    "subdomain_test_set = sort_by_url_length(subdomain_test_set)\n",
-    "subdomain_test_set = remove_duplicates(subdomain_test_set)\n",
-    "save_to_csv(subdomain_test_set, './data/subdomain_test_set.csv')\n",
-    "test_set = convert_to_list(subdomain_test_set)"
+    "subdomain_list = endpoints[endpoints['path_count'] == 0] # Subdomain test set\n",
+    "subdomain_list = filter_by_text_length(subdomain_list, 50)\n",
+    "subdomain_list = sort_by_url_length(subdomain_list)\n",
+    "subdomain_list = remove_duplicates(subdomain_list)\n",
+    "save_to_csv(subdomain_list, './data/subdomain_test_set.csv')\n",
+    "test_set = convert_to_list(subdomain_list)\n",
+    "subdomain_list.head()"
    ]
   },
   {
