Updated the subdomain test set

--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -354,21 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ryan\\AppData\\Local\\Temp\\ipykernel_6564\\1238050412.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['Text'] = df['Text'].astype(str)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -401,35 +389,35 @@
        "      <th>0</th>\n",
        "      <td>https://charlotte.edu</td>\n",
        "      <td>The University of North Carolina at Charlotte ...</td>\n",
-       "      <td>UNC Charlotte Icons 0 percent of new undergrad...</td>\n",
+       "      <td>UNC Charlotte Icons 0 percent transfers from N...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2773</th>\n",
-       "      <td>http://lc.charlotte.edu</td>\n",
-       "      <td>Learning Communities</td>\n",
-       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3522</th>\n",
+       "      <th>3243</th>\n",
        "      <td>http://hi.charlotte.edu</td>\n",
        "      <td>Health Informatics and Analytics</td>\n",
-       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <td>Master of Health Informatics and Analytics Hea...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2904</th>\n",
-       "      <td>http://pd.charlotte.edu</td>\n",
-       "      <td>Student Professional Development &amp; Employer Ou...</td>\n",
-       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <th>335</th>\n",
+       "      <td>http://uge.charlotte.edu</td>\n",
+       "      <td>Office of Undergraduate Education</td>\n",
+       "      <td>Home Success begins with crafting your journey...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10812</th>\n",
-       "      <td>http://iop.charlotte.edu</td>\n",
-       "      <td>Office of Intercultural and Educational Experi...</td>\n",
-       "      <td>Skip to Main Content Quick Links Gateway Links...</td>\n",
+       "      <th>2711</th>\n",
+       "      <td>http://tsi.charlotte.edu</td>\n",
+       "      <td>Transition &amp; Success Initiatives</td>\n",
+       "      <td>Welcome to Niner Nation! Transition &amp; Success ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2726</th>\n",
+       "      <td>https://ir.charlotte.edu</td>\n",
+       "      <td>Office of Institutional Effectiveness &amp; Analytics</td>\n",
+       "      <td>Institutional Effectiveness &amp; Analytics The Of...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -437,29 +425,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                            URL  \\\n",
-       "0         https://charlotte.edu   \n",
-       "2773    http://lc.charlotte.edu   \n",
-       "3522    http://hi.charlotte.edu   \n",
-       "2904    http://pd.charlotte.edu   \n",
-       "10812  http://iop.charlotte.edu   \n",
+       "                           URL  \\\n",
+       "0        https://charlotte.edu   \n",
+       "3243   http://hi.charlotte.edu   \n",
+       "335   http://uge.charlotte.edu   \n",
+       "2711  http://tsi.charlotte.edu   \n",
+       "2726  https://ir.charlotte.edu   \n",
        "\n",
-       "                                                   Title  \\\n",
-       "0      The University of North Carolina at Charlotte ...   \n",
-       "2773                                Learning Communities   \n",
-       "3522                    Health Informatics and Analytics   \n",
-       "2904   Student Professional Development & Employer Ou...   \n",
-       "10812  Office of Intercultural and Educational Experi...   \n",
+       "                                                  Title  \\\n",
+       "0     The University of North Carolina at Charlotte ...   \n",
+       "3243                   Health Informatics and Analytics   \n",
+       "335                   Office of Undergraduate Education   \n",
+       "2711                   Transition & Success Initiatives   \n",
+       "2726  Office of Institutional Effectiveness & Analytics   \n",
        "\n",
-       "                                                    Text  path_count  \n",
-       "0      UNC Charlotte Icons 0 percent of new undergrad...           0  \n",
-       "2773   Skip to Main Content Quick Links Gateway Links...           0  \n",
-       "3522   Skip to Main Content Quick Links Gateway Links...           0  \n",
-       "2904   Skip to Main Content Quick Links Gateway Links...           0  \n",
-       "10812  Skip to Main Content Quick Links Gateway Links...           0  "
+       "                                                   Text  path_count  \n",
+       "0     UNC Charlotte Icons 0 percent transfers from N...           0  \n",
+       "3243  Master of Health Informatics and Analytics Hea...           0  \n",
+       "335   Home Success begins with crafting your journey...           0  \n",
+       "2711  Welcome to Niner Nation! Transition & Success ...           0  \n",
+       "2726  Institutional Effectiveness & Analytics The Of...           0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
