--- a/WebServer.ipynb
+++ b/WebServer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,15 +10,37 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: txtai in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (7.0.0)\n",
+      "Requirement already satisfied: flask in c:\\python312\\lib\\site-packages (3.0.2)\n",
+      "Requirement already satisfied: faiss-cpu>=1.7.1.post2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (1.8.0)\n",
+      "Requirement already satisfied: torch>=1.12.1 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (2.2.1+cu121)\n",
+      "Requirement already satisfied: transformers>=4.27.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (4.38.2)\n",
+      "Requirement already satisfied: huggingface-hub>=0.9.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (0.21.3)\n",
+      "Requirement already satisfied: numpy>=1.18.4 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (1.26.4)\n",
+      "Requirement already satisfied: pyyaml>=5.3 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (6.0.1)\n",
+      "Requirement already satisfied: regex>=2022.8.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from txtai) (2023.12.25)\n",
+      "Requirement already satisfied: Werkzeug>=3.0.0 in c:\\python312\\lib\\site-packages (from flask) (3.0.1)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from flask) (3.1.2)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in c:\\python312\\lib\\site-packages (from flask) (2.1.2)\n",
+      "Requirement already satisfied: click>=8.1.3 in c:\\python312\\lib\\site-packages (from flask) (8.1.7)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in c:\\python312\\lib\\site-packages (from flask) (1.7.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from click>=8.1.3->flask) (0.4.6)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.9.0->txtai) (3.13.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.9.0->txtai) (2024.2.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.9.0->txtai) (2.31.0)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in c:\\python312\\lib\\site-packages (from huggingface-hub>=0.9.0->txtai) (4.66.2)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\python312\\lib\\site-packages (from huggingface-hub>=0.9.0->txtai) (4.10.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.9.0->txtai) (23.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from Jinja2>=3.1.2->flask) (2.1.3)\n",
+      "Requirement already satisfied: sympy in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.12.1->txtai) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.12.1->txtai) (3.2.1)\n",
+      "Requirement already satisfied: tokenizers<0.19,>=0.14 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers>=4.27.0->txtai) (0.15.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers>=4.27.0->txtai) (0.4.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.9.0->txtai) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.9.0->txtai) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python312\\lib\\site-packages (from requests->huggingface-hub>=0.9.0->txtai) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.9.0->txtai) (2024.2.2)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from sympy->torch>=1.12.1->txtai) (1.3.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement json (from versions: none)\n",
-      "ERROR: No matching distribution found for json\n"
      ]
     }
    ],
@@ -28,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
