--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Most recent URL: https://eng-resources.charlotte.edu/unccengkit/cooling, Status: Success, Exception: None'"
+       "'Most recent URL: https://ninernationweek.charlotte.edu, Status: Success, Exception: None'"
       ]
      },
      "metadata": {},
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "'Successes: 14675, Failures: 189'"
+       "'Successes: 5932, Failures: 66'"
       ]
      },
      "metadata": {},
@@ -120,9 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n",
-      "c:\\Python312\\Lib\\html\\parser.py:171: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
-      "  k = self.parse_starttag(i)\n"
+      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n"
      ]
     }
    ],
@@ -354,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +539,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: bitsandbytes in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (0.41.2.post2)\n",
+      "Requirement already satisfied: accelerate in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (0.27.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from bitsandbytes) (1.12.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (23.2)\n",
+      "Requirement already satisfied: psutil in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (5.9.8)\n",
+      "Requirement already satisfied: pyyaml in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (6.0.1)\n",
+      "Requirement already satisfied: torch>=1.10.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (2.2.1+cu121)\n",
+      "Requirement already satisfied: huggingface-hub in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (0.21.3)\n",
+      "Requirement already satisfied: safetensors>=0.3.1 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from accelerate) (0.4.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.10.0->accelerate) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\python312\\lib\\site-packages (from torch>=1.10.0->accelerate) (4.10.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.10.0->accelerate) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.10.0->accelerate) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.10.0->accelerate) (3.1.2)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.10.0->accelerate) (2024.2.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub->accelerate) (2.31.0)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in c:\\python312\\lib\\site-packages (from huggingface-hub->accelerate) (4.66.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from tqdm>=4.42.1->huggingface-hub->accelerate) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from jinja2->torch>=1.10.0->accelerate) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub->accelerate) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub->accelerate) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python312\\lib\\site-packages (from requests->huggingface-hub->accelerate) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub->accelerate) (2024.2.2)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from sympy->torch>=1.10.0->accelerate) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install bitsandbytes accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,38 +594,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ryan\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\auto\\configuration_auto.py:1096: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Ryan\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\auto\\auto_factory.py:466: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n"
+      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61670f63f8634cc6ba4721071e128746",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ryan\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\auto\\tokenization_auto.py:720: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c999be117284703b682d81a15aaa273",
+       "model_id": "2eb2d0c4ac2e4b5396918e51cc4a768d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,10 +615,10 @@
    "source": [
     "# LLM Model \n",
     "import torch\n",
-    "from transformers import pipeline, AutoTokenizer, AutoModelForCausalLM, AutoConfig, BitsAndBytesConfig\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
     "from textwrap import dedent\n",
     "import json\n",
-    "from IPython.display import clear_output, display\n",
+    "from IPython.display import display\n",
     "import time\n",
     "import json\n",
     "import os\n",
@@ -612,7 +626,7 @@
     "# Environment setup\n",
     "def is_running_on_colab():\n",
     "    try:\n",
-    "        from google.colab import drive\n",
+    "        from google.colab import userdata\n",
     "        return True\n",
     "    except ModuleNotFoundError:\n",
     "        return False\n",
@@ -625,16 +639,12 @@
     "MODEL = \"google/gemma-2b-it\" # Newer and small model, promising given the size to performance as well as open source\n",
     "\n",
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
-    "#device = \"cpu\"\n",
     "print(device)\n",
     "\n",
-    "config = AutoConfig.from_pretrained(MODEL, use_auth_token=access_token, max_new_tokens=512)\n",
-    "quantization_config = BitsAndBytesConfig(load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16)\n",
+    "quantization_config = BitsAndBytesConfig(load_in_4bit=True, torch_dtype=torch.float16, bnb_4bit_compute_dtype=torch.float16)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b-it\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b-it\", quantization_config=quantization_config)\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(MODEL, use_auth_token=access_token, config=config, device_map=device)#.to(device) #.to not needed if quantization is used, defaults to cuda\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL, use_auth_token=access_token, config=config)\n",
-    "\n",
-    "generator = pipeline(\"text-generation\", model=MODEL, config=config)\n",
     "LLM_INSTRUCT_PROMPT = dedent('''\\\n",
     "Given the URL \"{url}\", the title of the webpage \"{title}\", and the following text from the site: \"{text}\" provide a concise summary that includes:\n",
     "1. The main topics in the text.\n",
@@ -650,12 +660,6 @@
     "'tags': ['tag1', 'tag2', 'tag3']\n",
     "''')\n",
     "\n",
-    "# This function takes a prompt and returns generated text with transformers generator\n",
-    "def generate_summary(url: str, title:str, text:str) -> str:\n",
-    "    prompt = LLM_INSTRUCT_PROMPT.format(url=url, text=text, title=title)\n",
-    "    return generator(prompt, max_new_tokens=800, do_sample=True, truncation=True)\n",
-    "\n",
-    "# Manual\n",
     "def gen_summary(url: str, title:str, text:str) -> str:\n",
     "    chat = [\n",
     "        { \"role\": \"user\", \"content\": LLM_INSTRUCT_PROMPT.format(url=url, text=text, title=title) },\n",
@@ -664,7 +668,6 @@
     "    input_ids = tokenizer([prompt], add_special_tokens=False, return_tensors=\"pt\").to(device)\n",
     "    output = model.generate(**input_ids, max_new_tokens=1000)\n",
     "    return tokenizer.decode(output[0], skip_special_tokens=True)\n",
-    "\n",
     "\n",
     "def extract_summary(llm_output: str):\n",
     "    model_index = llm_output.find(\"'tags': ['tag1', 'tag2', 'tag3']\\nmodel\")\n",
@@ -693,13 +696,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "# Clrear GPU cache as it builds up\n",
+    "def flush_gpu_cache():\n",
+    "    if device == \"cuda:0\":\n",
+    "        torch.cuda.empty_cache()\n",
+    "        gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Most recent URL: http://hi.charlotte.edu, Extract: Master of Health Informatics and Analytics program at UNC Ch...'"
+       "'Most recent URL: https://interdisciplinarystudies.charlotte.edu, Extract: The Office of Interdisciplinary Studies promotes interdiscip...'"
       ]
      },
      "metadata": {},
@@ -708,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "'Successes: 2, Failures: 0'"
+       "'Successes: 450, Failures: 4'"
       ]
      },
      "metadata": {},
@@ -717,11 +735,19 @@
     {
      "data": {
       "text/plain": [
-       "'Average time: 102.45294094085693, Last time: 118.08969831466675'"
+       "'Average time: 4.424689705636769, Last time: 5.8220055103302'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ryan\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\gemma\\modeling_gemma.py:561: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:263.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
     }
    ],
    "source": [
@@ -742,7 +768,7 @@
     "extract_summaries = []\n",
     "final_urls = []\n",
     "\n",
-    "test_set = convert_to_list(pd.read_csv('./data/subdomain_test_set.csv'))\n",
+    "test_set = list(pd.read_csv('./data/subdomain_test_set.csv').itertuples(index=False, name=None))\n",
     "\n",
     "for t in test_set:\n",
     "    start_time = time.time()\n",
@@ -753,6 +779,7 @@
     "        extract_summaries.append(extract)\n",
     "        if extract is not None:\n",
     "            extract['url']=t[0]\n",
+    "            extract['title']=t[1]\n",
     "            final_urls.append(extract)\n",
     "            success_count += 1\n",
     "            current_display.update(f'Most recent URL: {t[0]}, Extract: {extract[\"summary\"][:60]}...')\n",
@@ -760,6 +787,7 @@
     "\n",
     "            # Save the final urls to a json file every 10 summaries, in case of failure or runtime error. This ensures we don't waste progress\n",
     "            if success_count % 10 == 0:\n",
+    "                flush_gpu_cache()\n",
     "                with open('./data/sublist_llm_summaries_from_pipeline.json', 'w') as f:\n",
     "                    json.dump(final_urls, f, indent=4)\n",
     "        else:\n",
@@ -781,15 +809,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Clear llm model and objects from memory once complete\n",
     "\n",
     "del model\n",
-    "del tokenizer\n",
-    "del generator"
+    "del tokenizer"
    ]
   },
   {
@@ -827,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,11 +866,11 @@
     "embeddings = txtai.Embeddings(path=\"sebastian-hofstaetter/distilbert-dot-tas_b-b256-msmarco\", content=True)\n",
     "\n",
     "def to_displayable_text(row):\n",
-    "    return f\"{row['url']}\\n{row['summary']}\\n{row['topics']}\\n{row['tags']}\"\n",
+    "    return f\"{row['url']}\\n{row['title']}\\n{row['summary']}\\n{row['topics']}\\n{row['tags']}\"\n",
     "\n",
     "if 'final_urls' not in globals():\n",
     "    try:\n",
-    "        with open('./data/llm_summaries.json', 'r') as f:\n",
+    "        with open('./data/sublist_llm_summaries_from_pipeline.json', 'r') as f:\n",
     "            final_urls = json.load(f)\n",
     "    except FileNotFoundError:\n",
     "        print('No file found')\n",
@@ -864,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
