--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -582,6 +582,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (2.2.1+cu121)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\python312\\lib\\site-packages (from torch) (4.10.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.1.2)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (2024.2.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from jinja2->torch) (2.1.3)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from sympy->torch) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -856,9 +881,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data/sublist_llm_summaries_from_pipeline.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m---> 14\u001b[0m         final_urls \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo file found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import txtai\n",
     "import os\n",
@@ -968,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -986,12 +1023,44 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [20/Mar/2024 17:24:47] \"POST /search HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Mar/2024 17:25:03] \"POST /search HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Mar/2024 17:25:18] \"POST /search HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Mar/2024 17:25:41] \"POST /search HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Mar/2024 17:26:00] \"POST /search HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Mar/2024 17:26:13] \"POST /search HTTP/1.1\" 200 -\n"
+      "[2024-03-20 17:45:26,864] ERROR in app: Exception on /search [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1463, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 872, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 870, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 855, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Ryan\\AppData\\Local\\Temp\\ipykernel_6248\\1726753683.py\", line 11, in search_endpoint\n",
+      "    results = search(query, max_results=max_results)\n",
+      "              ^^^^^^\n",
+      "NameError: name 'search' is not defined\n",
+      "127.0.0.1 - - [20/Mar/2024 17:45:26] \"POST /search HTTP/1.1\" 500 -\n",
+      "[2024-03-20 17:45:30,666] ERROR in app: Exception on /search [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1463, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 872, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 870, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python312\\Lib\\site-packages\\flask\\app.py\", line 855, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Ryan\\AppData\\Local\\Temp\\ipykernel_6248\\1726753683.py\", line 11, in search_endpoint\n",
+      "    results = search(query, max_results=max_results)\n",
+      "              ^^^^^^\n",
+      "NameError: name 'search' is not defined\n",
+      "127.0.0.1 - - [20/Mar/2024 17:45:30] \"POST /search HTTP/1.1\" 500 -\n"
      ]
     }
    ],
