--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -582,27 +582,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (2.2.1+cu121)\n",
+      "Requirement already satisfied: torch in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (2.2.1+cu121)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: transformers in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (4.38.2)\n",
       "Requirement already satisfied: filelock in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.13.1)\n",
       "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\python312\\lib\\site-packages (from torch) (4.10.0)\n",
       "Requirement already satisfied: sympy in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (1.12)\n",
       "Requirement already satisfied: networkx in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.2.1)\n",
       "Requirement already satisfied: jinja2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (3.1.2)\n",
       "Requirement already satisfied: fsspec in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from torch) (2024.2.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (0.21.3)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (23.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (2023.12.25)\n",
+      "Requirement already satisfied: requests in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (2.31.0)\n",
+      "Requirement already satisfied: tokenizers<0.19,>=0.14 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (0.15.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (0.4.2)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\python312\\lib\\site-packages (from transformers) (4.66.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from jinja2->torch) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->transformers) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->transformers) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python312\\lib\\site-packages (from requests->transformers) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from requests->transformers) (2024.2.2)\n",
       "Requirement already satisfied: mpmath>=0.19 in c:\\users\\ryan\\appdata\\roaming\\python\\python312\\site-packages (from sympy->torch) (1.3.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install torch"
+    "%pip install torch transformers"
    ]
   },
   {
@@ -734,6 +750,15 @@
     "    if device == \"cuda:0\":\n",
     "        torch.cuda.empty_cache()\n",
     "        gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pandas"
    ]
   },
   {
