removed quantization, added midterm demo

--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -658,7 +658,7 @@
    "source": [
     "# LLM Model \n",
     "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from textwrap import dedent\n",
     "import json\n",
     "from IPython.display import display\n",
@@ -684,9 +684,8 @@
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(device)\n",
     "\n",
-    "quantization_config = BitsAndBytesConfig(load_in_4bit=True, torch_dtype=torch.float16, bnb_4bit_compute_dtype=torch.float16)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b-it\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b-it\", quantization_config=quantization_config)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b-it\", device_map=device, torch_dtype=torch.bfloat16)\n",
     "\n",
     "LLM_INSTRUCT_PROMPT = dedent('''\\\n",
     "Given the URL \"{url}\", the title of the webpage \"{title}\", and the following text from the site: \"{text}\" provide a concise summary that includes:\n",
@@ -739,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
